# lib/api-spec/openapi.yaml
@@ -203,6 +203,16 @@ components:
           type: ["number", "null"]
         avgPower:
           type: ["number", "null"]
+        normalizedPower:
+          type: ["number", "null"]
+        avgVerticalOscillationMm:
+          type: ["number", "null"]
+        avgStanceTimeMs:
+          type: ["number", "null"]
+        avgVerticalRatio:
+          type: ["number", "null"]
+        avgStepLengthMm:
+          type: ["number", "null"]
         createdAt:
           type: string
           format: date-time
@@ -222,6 +232,11 @@ components:
         - totalCalories
         - avgCadence
         - avgPower
+        - normalizedPower
+        - avgVerticalOscillationMm
+        - avgStanceTimeMs
+        - avgVerticalRatio
+        - avgStepLengthMm
         - createdAt
 
     DataPoint:
@@ -244,6 +259,8 @@ components:
           type: ["number", "null"]
         distance:
           type: ["number", "null"]
+        power:
+          type: ["number", "null"]
       required:
         - timestamp
         - heartRate
@@ -253,6 +270,7 @@ components:
         - lng
         - speed
         - distance
+        - power
 
     ActivityDetail:
       type: object
@@ -288,6 +306,16 @@ components:
           type: ["number", "null"]
         avgPower:
           type: ["number", "null"]
+        normalizedPower:
+          type: ["number", "null"]
+        avgVerticalOscillationMm:
+          type: ["number", "null"]
+        avgStanceTimeMs:
+          type: ["number", "null"]
+        avgVerticalRatio:
+          type: ["number", "null"]
+        avgStepLengthMm:
+          type: ["number", "null"]
         fileObjectPath:
           type: ["string", "null"]
         createdAt:
@@ -313,6 +341,11 @@ components:
         - totalCalories
         - avgCadence
         - avgPower
+        - normalizedPower
+        - avgVerticalOscillationMm
+        - avgStanceTimeMs
+        - avgVerticalRatio
+        - avgStepLengthMm
         - fileObjectPath
         - createdAt
         - dataPoints
